borrador-N°-2-desafio-E-comerce

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="borde">
+    <header>
 
         <h1> Mi E-comerce</h1>
 
@@ -22,23 +22,23 @@
 
 
 
-    <aside class="borde">
+    <aside>
 
         <nav>
+            <div class="Menu">
+                <h4>Categorias</h4>
 
 
-
+                <a class="linkmenu" href="#">Perfumes <span class="ajustecolor">(13)</span></a>
+                <a class="linkmenu" href="#">Ropa <span class="ajustecolor">(21)</span></a>
+                <a class="linkmenu" href="#">Accesorios <br>
+                    <span class="ajustecolor">(41)</span></a>
+                <a class="linkmenu" href="#">Zapatos<span class="ajustecolor">(10)</span></a>
+            </div>
 
 
 
         </nav>
-
-
-
-
-
-
-
 
     </aside>
 
@@ -49,8 +49,115 @@
 
 
 
-    <main class="borde">main</main>
-    <footer class="borde">footer</footer>
+    <main>
+
+        <section class="contenedor-cards">
+            <!--tarjeta 1-->
+            <div class="card">
+
+                <img src="./assets/img/perfume-kingdom.avif" alt="perfumecolornegro">
+
+
+                <div class=" cardprincipal">
+                    <h2>Perfume myKingdom</h2>
+
+                    <p>31.400</p>
+                </div>
+
+                <div>
+                    <button class="cardboton">
+                        Comprar</button>
+
+                </div>
+
+            </div>
+
+            <!--tarjeta 2-->
+
+            <div class="card">
+
+                <img src="./assets/img/perfume-phantom.webp" alt="perfume-plateado">
+
+
+                <div class=" cardprincipal">
+                    <h2>Perfume Phanton</h2>
+
+                    <p>68.900</p>
+                </div>
+
+                <div>
+                    <button class="cardboton">
+                        Comprar</button>
+
+                </div>
+
+            </div>
+
+
+            <!--tarjeta 3-->
+
+            <div class="card">
+
+                <img src="./assets/img/zapatos.webp" alt="Zapatos Negros">
+
+
+                <div class=" cardprincipal">
+                    <h2>zapato Docker</h2>
+
+                    <p>29.700</p>
+                </div>
+
+                <div>
+                    <button class="cardboton">
+                        Comprar</button>
+
+                </div>
+
+            </div>
+
+
+
+
+            <!--tarjeta 4-->
+            <div class="card">
+
+                <img src="./assets/img/POLERON-CALAFATE-LENGA-BLACK-01.png" alt="poleron-negro">
+
+
+                <div class=" cardprincipal">
+                    <h2>Poleron Puma</h2>
+
+                    <p>44.700</p>
+                </div>
+
+                <div>
+                    <button class="cardboton">
+                        Comprar</button>
+
+                </div>
+
+            </div>
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+    <footer>
+
+        <h5>@Miecomerce</h5>
+
+    </footer>
 
 
 
