--- a/index.html
+++ b/index.html
@@ -15,48 +15,33 @@
 <body>
 
     <header>
-
-        <h1> Mi E-comerce</h1>
-
+        <h1 class="titulo"> Mi E-comerce</h1>
     </header>
-
-
 
     <aside>
 
-        <nav>
-            <div class="Menu">
-                <h4>Categorias</h4>
+        <nav class="menu">
 
-
+            <div class="menu-navegador">
+                <h4 class="titulo-menu">Categorias</h4>
                 <a class="linkmenu" href="#">Perfumes <span class="ajustecolor">(13)</span></a>
                 <a class="linkmenu" href="#">Ropa <span class="ajustecolor">(21)</span></a>
                 <a class="linkmenu" href="#">Accesorios <br>
                     <span class="ajustecolor">(41)</span></a>
                 <a class="linkmenu" href="#">Zapatos<span class="ajustecolor">(10)</span></a>
             </div>
-
-
-
         </nav>
 
     </aside>
 
-
-
-
-
-
-
-
     <main>
 
         <section class="contenedor-cards">
-            <!--tarjeta 1-->
+
             <div class="card">
 
-                <img src="./assets/img/perfume-kingdom.avif" alt="perfumecolornegro">
 
+                <img src="./assets/img/perfume-kingdom.avif" alt="perfumecolornegro">
 
                 <div class=" cardprincipal">
                     <h2>Perfume myKingdom</h2>
@@ -69,7 +54,6 @@
                         Comprar</button>
 
                 </div>
-
             </div>
 
             <!--tarjeta 2-->
@@ -138,8 +122,6 @@
 
             </div>
 
-
-
         </section>
 
 
@@ -150,16 +132,12 @@
 
 
 
-
-
     </main>
-    <footer>
 
+    <footer>
         <h5>@Miecomerce</h5>
 
     </footer>
-
-
 
 
 
