--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <h1 class="titulo"> Mi E-comerce</h1>
+        <h1 class="titulo"> Mi E-commerce</h1>
     </header>
 
     <aside>
